# soldank

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: audit.yml  devskim.yml  rust-clippy.yml  rust.yml
ci/: before_deploy.ps1  before_deploy.sh
client/: Cargo.toml
client/gfx2d/: Cargo.toml  README.md
client/gfx2d/src/: batch.rs  color.rs  lib.rs  spritesheet.rs  transform.rs
client/gfx2d/src/context/: mod.rs  pipeline.rs
client/resources/: autoexec.cfg  config.cfg  config.rhai  sprites.conf
client/src/: anims.rs  bullet.rs  calc.rs  cli.rs  components.rs  constants.rs  control.rs  cvars.rs  events.rs  game.rs  main.rs  mapfile.rs  networking.rs  particles.rs  physics.rs  soldier.rs  state.rs  systems.rs  weapons.rs
client/src/debug/: cli.rs  entities.rs  mod.rs  render.rs  spawner.rs
client/src/engine/: events.rs  frame_timer.rs  input.rs  logger.rs  miniquad.rs  mod.rs  script.rs  utils.rs  world.rs
client/src/game/: components.rs  main.rs  mod.rs  physics.rs  systems.rs
client/src/game/systems/: debug.rs  mod.rs  movement.rs  soldier.rs
client/src/render/: components.rs  debug.rs  game.rs  gfx.rs  gfx_macro.rs  map.rs  mod.rs  soldiers.rs  systems.rs
gfx2d/: Cargo.toml  README.md
gfx2d/src/: batch.rs  binpack.rs  color.rs  extra.rs  gfx_types.rs  lib.rs  math.rs  matrix.rs  spritesheet.rs  texture.rs  transform.rs  vec2.rs
gfx2d/src/context/: mod.rs  pipeline.rs
orb/: Cargo.toml
orb/src/: client.rs  command.rs  lib.rs  server.rs  timestamp.rs
orb/src/world/: display_state.rs  world_trait.rs
resources/: soldat.smod  sprites.conf
server/: Cargo.toml
server/src/: cheat.rs  cli.rs  connections.rs  constants.rs  cvars.rs  main.rs  networking.rs  state.rs  systems.rs
shaders/: background_140.glsf  background_140.glsv  map_140.glslf  map_140.glslv
shared/: Cargo.toml
shared/src/: actors.rs  behaviors.rs  components.rs  constants.rs  control.rs  cvars.rs  events.rs  example_actor.rs  lib.rs  manifest_load.rs  messages.rs  networking.rs  physics.rs  point_actor.rs  world.rs
shared/src/orb/: client.rs  command.rs  fixed_timestepper.rs  mod.rs  server.rs  timestamp.rs  world.rs
shared/src/orb/world/: display_state.rs  simulation.rs  world_trait.rs
shared/src/physics/: mod.rs  resources.rs  systems.rs
shared/src/systems/: debug.rs  input.rs  mod.rs  movement.rs
src/: anims.rs  bullet.rs  calc.rs  constants.rs  control.rs  main.rs  mapfile.rs  particles.rs  soldier.rs  state.rs  weapons.rs
src/debug/: mod.rs  render.rs
src/render/: bullets.rs  game.rs  gfx.rs  gfx_macro.rs  map.rs  mod.rs  soldiers.rs
src/shared/: anims.rs  calc.rs  control.rs  mapfile.rs  mod.rs  particles.rs  parts.rs  renderer.rs  soldier.rs  sprites.rs  state.rs  weapons.rs
src/shared/render/: game.rs  gfx.rs  gostek.rs  map.rs  mod.rs  sprite_data.rs  sprite_data_macro.rs
