[workspace]
members = ["client", "gfx2d", "server", "shared", "orb"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
incremental = false

[patch.crates-io]
cvar = { git = "https://github.com/CasualX/cvar.git" }
hecs = { git = "https://github.com/smokku/hecs.git" }
hecs_rapier = { git = "https://github.com/smokku/hecs_rapier.git" }
gvfs = { git = "https://github.com/smokku/gvfs.git" }
