[package]
name = "soldank"
version = "0.1.0"
authors = ["helloer <im.helloer@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
byteorder = "1.3"
gfx2d = { path = "gfx2d" }
rust-ini = "0.17"
bit-array = "0.4"
typenum = "1.12"
clap = "2.33"
lazy_static = "1.4"

[patch.crates-io]
miniquad = { git = "https://github.com/not-fl3/miniquad.git" }
