[package]
name = "gfx2d"
version = "0.1.0"
authors = ["Mariano Cuatrin <mariano.cuatrin@gmail.com>"]

[dependencies]
gfx = "0.18"
gfx_core = "0.9"
gfx_device_gl = "0.16"
gfx_window_glutin = { version = "0.33", git = "https://github.com/bebrws/gfx_window_glutin.git" }
glutin = "0.25"
image = "0.23"
glam = "0.11"
rgb = "0.8"
