[package]
name = "orb"
version = "0.2.1"
authors = [
  "Ernest Wong <sudo@ernestwong.nz>",
  "Tomasz Sterna <tomasz@sterna.link>"
]
categories = ["games", "simulation"]
description = "Network-agnostic, high-level game networking library"
edition = "2018"
keywords = ["netcode"]
license = "Apache-2.0"

[dependencies]
log = "0.4"
simple-error = "0.2"

[dev-dependencies]
itertools = "0.10"
float-cmp = "0.9"
env_logger = "0.9"
test-env-log = "0.2"
