[package]
name = "soldank-server"
description = "open source clone of Soldat engine written in Rust"
version = "0.1.0"
authors = ["Tomasz Sterna <tomasz@sterna.link>"]
edition = "2018"
license = "MIT"
publish = false

[features]
default = ["use-udp"]
use-udp = ["naia-server-socket/use-udp"]
use-webrtc = ["naia-server-socket/use-webrtc"]

[dependencies]
soldank-shared = { path = "../shared" }
naia-server-socket = "0.4"
log = "0.4"
simple_logger = "1.4"
smol = "1.2"
clap = "2.33"
instant = { version = "0.1", default-features = false, features = ["now"] }
laminar = "0.4"
