[package]
name = "soldank-server"
description = "open source clone of Soldat engine written in Rust"
version = "0.1.0"
authors = ["Tomasz Sterna <tomasz@sterna.link>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
soldank-shared = { path = "../shared" }
log = "0.4"
env_logger = "0.11"
smol = "1.2"
clap = { version = "4.5", features = ["env"] }
hecs = { version = "0.6", features = [] }
bitflags = "1.2"
bytes = "1.0"
color-eyre = "0.6"
cvar = "0.3"
