[package]
name = "soldank-shared"
version = "0.1.0"
authors = ["Tomasz Sterna <tomasz@sterna.link>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
gfx2d = { path = "../client/gfx2d" }
log = "0.4"
bytes = "1.0"
hexdump = "0.1"
num-traits = "0.2"
enum-primitive-derive = "0.2"
bitflags = "1.2"
nanoserde = "0.1"
legion = { version = "0.4", default-features = false, features = ["codegen"] }
cvar = "0.3"
