[package]
name = "soldank-shared"
version = "0.1.0"
authors = ["Tomasz Sterna <tomasz@sterna.link>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
log = "0.4"
bytes = "1.0"
hexdump = "0.1"
num-traits = "0.2"
enum-primitive-derive = "0.2"
bitflags = "1.2"
nanoserde = "0.1"
hecs = { version = "0.5", features = ["macros"] }
resources = "1.1"
cvar = "0.3"
clap = "2.33"
rapier2d = { version = "0.10", features = ["simd-stable"] }
nalgebra = { version = "0.28", features = ["convert-glam014"] }
glam = "0.14"
derive_deref = "1.1"
